--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="page">
-        <header>
+        <header id="home">
 
             <div class="heading" >
 
@@ -22,13 +22,13 @@
                         <a href="#">Startup</a>
                     </div>
                     <nav id="nav">
-                        <a href="#" class="nav_links">Home</a>
-                        <a href="#" class="nav_links">Services </a>
-                        <a href="#" class="nav_links">About</a>
-                        <a href="#" class="nav_links">Works </a>
-                        <a href="#" class="nav_links">Blog </a>
-                        <a href="#" class="nav_links">Clients</a>
-                        <a href="#" class="nav_links">Contact</a>
+                        <a href="#" class="nav_links" data-scroll="#home" >Home</a>
+                        <a href="#" class="nav_links" data-scroll="#services">Services </a>
+                        <a href="#" class="nav_links" data-scroll="#about">About</a>
+                        <a href="#" class="nav_links" data-scroll="#works">Works </a>
+                        <a href="#" class="nav_links" data-scroll="#blog">Blog </a>
+                        <a href="#" class="nav_links" data-scroll="#clients">Clients</a>
+                        <a href="#" class="nav_links" data-scroll="#contact">Contact</a>
                     </nav>
 
                     <button class="nav_toggle" id="nav_toggle" type="button">
@@ -56,7 +56,7 @@
 
         
 
-        <section>
+        <section id="services">
             <div class="container">
                 <div class="title">
                     Services
@@ -105,7 +105,7 @@
             </div>
 
         </section>
-        <section>
+        <section id="about">
             <div class="container">
                 <div class="title">
                     About us
@@ -160,7 +160,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="works">
             <div class="container">
                 <div class="title">
                     Latest Works
@@ -276,7 +276,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section >
             <div class="our_works">
                 <div class="container">
                     <div class="our_works_title">
@@ -289,7 +289,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="blog">
             <div class="container">
                 <div class="title">
                     Recent blog posts
@@ -351,7 +351,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="clients">
             <div class="container">
                 <div class="partners">
                     <div class="partners_items"><img class="partners_img" src="img/Layer_30.png" alt=""></div>
@@ -372,7 +372,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="contact">
             <div class="container">
                 <div class="title">
                     Get in touch
