--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 <div class="heading_items" id="heaer">
                     <div class="heading_logo">
-                        <a href="#">Startup</a>
+                        <a href="buttons/index.html">Startup</a>
                     </div>
                     <nav id="nav">
                         <a href="#" class="nav_links" data-scroll="#home" >Home</a>
